[package]
name = "kosalt"
version = "3.1.4"
edition = "2021"
authors = ["Eli <vmlinuz@duck.com>"]
description = "This package allows for quick encoding and decoding text"
documentation = "https://github.com/tired-tux/kos/edit/main/README.md"
repository = "https://github.com/tired-tux/kos/"
homepage = "https://github.com/tired-tux/kos/"
license-file = "LICENSE"
keywords = ["encoding", "encryption","crypt"]
categories = ["cryptography", "encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.99"
string-join = "0.1.2"
